# mimofan

./: .claudeignore  .cnb.yml  .cursorignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_MASTER_PLAN.md  ARCHITECTURE_PLAN.md  ARCHITECTURE_REFORM.md  ARCHITECTURE_REFORM_PLAN.md  ARCHITECTURE_REFORM_PLAN_V2.md  CHANGELOG.md  CLAUDE.md  CONSTANTS_AND_CONFIG_CONSOLIDATION.md  Cargo.toml  DEEPSEEK_CACHE_AUDIT.md  Dockerfile  MIMOFAN_GUIDE_CN.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PREFIX_CACHE_OPTIMIZATION.md  README.md  SECURITY.md  SESSION_SUMMARY.md  SKILLS_AUDIT_LIST.md  STABILITY_RISKS_ANALYSIS.md  USER_GUIDE.md  config.example.toml  package.json  report.md  run_deploy_and_test.sh  settings.example.json
.cargo/: config.toml
.codewhale/: constitution.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug_report.md  feature_request.md
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: auto-tag.yml  ci.yml  claude-review.yml  issue-gate.yml  nightly.yml  pr-gate.yml  release.yml  sync-cnb.yml  web.yml
.kiro/specs/tui-lib-bin-refactor/: design.md  requirements.md  tasks.md
benchmark_results/: deepseek-anthropic-comparison-2026-06-24.md
crates/agent/: Cargo.toml
crates/agent/src/: family.rs  lib.rs  provider_resolver.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: chat_completions.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  metrics.rs  update.rs
crates/config/: Cargo.toml
crates/config/assets/: models_dev.bundled.json
crates/config/src/: catalog.rs  harness.rs  lib.rs  models_dev.rs  pricing.rs  provider.rs  provider_defaults.rs  provider_kind.rs  tests.rs
crates/config/src/catalog/: tests.rs
crates/config/src/route/: mod.rs  offering.rs  resolver.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: job.rs  lib.rs  thread.rs
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: bash_arity.rs  lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/mcp/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: app.rs  approval.rs  event.rs  fleet.rs  lib.rs  thread.rs  tool.rs  workroom.rs
crates/protocol/tests/: parity_protocol.rs
crates/release/: Cargo.toml
crates/release/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/state/tests/: parity_state.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/tests/: parity_tools.rs
crates/tui/: CHANGELOG.md  Cargo.toml  build.rs
crates/tui/locales/: zh-Hans.json
crates/tui/src/: acp_server.rs  artifacts.rs  audit.rs  auto_reasoning.rs  automation_manager.rs  child_env.rs  client.rs  command_safety.rs  compaction.rs  composer_history.rs  composer_stash.rs  config.rs  config_persistence.rs  config_ui.rs  context_budget.rs  context_report.rs  cost_status.rs  deepseek_theme.rs  dependencies.rs  error_taxonomy.rs  eval.rs  features.rs  goal_loop.rs  hooks.rs  lib.rs  llm_response_cache.rs  localization.rs  logging.rs  main.rs  mcp.rs  mcp_server.rs  memory.rs  model_catalog.rs  model_inventory.rs  models.rs  (+36 more)
crates/whaleflow/: Cargo.toml
docs/: ACCESSIBILITY.md  ACP_REGISTRY_SUBMISSION.md  AGENT_ETHOS.md  AGENT_RUNTIME.md  ARCHITECTURE_CN.md  ARCHITECTURE_CN_V2.md  CHANGELOG_ARCHIVE.md  CLASSROOM_INSTALL.md  CLAUDE_PLUGIN_COMPAT.md  CNB_MIRROR.md  CONFIGURATION.md  CONTRIBUTORS.md  DEAD_CODE_EXECUTION_CHECKLIST.md  DOCKER.md  FLEET.md  GUIDE.md  INSTALL.md  KEYBINDINGS.md  LEGACY_PATHS.md  MCP.md  MEMORY.md  MODEL_LAB.md  MODES.md  OPERATIONS_RUNBOOK.md  PROMPTS.md  PROVIDERS.md  RECEIPTS.md  RECURSIVE_SELF_IMPROVEMENT.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RUNTIME_API.md  SANDBOX.md  SKILL_INVOCATION_DESIGN.md  STABILITY_ANALYSIS.md  STABILITY_ANALYSIS_CN.md  SUBAGENTS.md  TOOL_LIFECYCLE.md  TOOL_SURFACE.md  USAGE_CN.md  USAGE_GUIDE_CN.md  (+3 more)
docs/architecture/: command-dispatch.md  pr-issue-evidence-prep.md
docs/examples/: Dockerfile.toolbox  compose.toolbox.yml  fleet-dogfood.toml
docs/rfcs/: 1364-hooks-lifecycle.md  2189-persistence-sqlite.md  2190-mcp-modularization.md  2574-provider-fallback-chain.md  3209-workrooms.md  HARNESS_PROFILE_CUTLINE.md  ORCHESTRATION_AND_FLEET.md  REMOTE_SETUP_DESIGN.md  WHALEFLOW_EXTERNAL_MEMORY.md
docs/skills/: README.md
extensions/vscode/: README.md  package.json
integrations/bridge-core/: package.json
integrations/feishu-bridge/: .env.example  README.md  package.json
integrations/telegram-bridge/: .env.example  README.md  package.json
integrations/wecom-bridge/: .env.example  README.md  package.json
integrations/weixin-bridge/: .env.example  README.md  package.json
npm/codewhale/: README.md  package.json
npm/deepseek-tui/: README.md  package.json
npm/mimofan/: README.md  package.json
npm/runtime-sdk/: README.md  index.d.ts  index.js  package.json
scripts/: measure-tool-catalog.py  mobile-smoke.sh  sync-changelog.sh
scripts/installer/: codewhale.nsi
scripts/release/: app-server-smoke.sh  app-server-smoke.test.sh  branch-hygiene.sh  check-ohos-deps.sh  check-published.sh  check-versions.sh  crates.sh  generate-release-body.sh  install.bat  install.sh  npm-wrapper-smoke.js  prepare-local-release-assets.js  prepare-release.sh  publish-crates.sh
scripts/remote-smoke/: README.md  agent-session.sh  setup-vm.sh
scripts/tencent-lighthouse/: bootstrap-ubuntu.sh  doctor.sh  install-services.sh
web/: .env.example  AGENT.md  README.md  package-lock.json  package.json  wrangler.jsonc
web/app/: opengraph-image.tsx
web/components/: footer.tsx  install-binary.tsx  nav.tsx  thinking-trace.tsx
web/lib/: community-agent-tasks.ts  community-agent.ts  content-watch.ts  deepseek.ts  docs-map.ts  facts-drift.ts  facts.generated.ts  github.test.ts  github.ts  page-meta.ts  release-credits.ts  roadmap-feed.ts
web/public/: install.sh
web/redirect/: wrangler.jsonc
web/scripts/: check-docs.mjs  check-facts.mjs  derive-facts.mjs  facts-lib.mjs
workflows/: rlm_cache_change.star
(+351 files in other folders)
