[workspace]
members = [
    "crates/agent",
    "crates/app-server",
    "crates/cli",
    "crates/config",
    "crates/core",
    "crates/execpolicy",
    "crates/hooks",
    "crates/mcp",
    "crates/protocol",
    "crates/release",
    "crates/secrets",
    "crates/state",
    "crates/tools",
    "crates/tui",
    "crates/whaleflow",
]
default-members = ["crates/cli", "crates/app-server", "crates/tui"]
resolver = "2"

[workspace.package]
version = "0.8.65"
edition = "2024"
# Rust 1.88 stabilized `let_chains` in `if`/`while` conditions, which the
# codebase relies on extensively. Cargo enforces this so users on older
# toolchains get a clear "package requires rustc 1.88+" error instead of a
# confusing E0658 from rustc.
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/XiaomingX/mimo-tui"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.5", features = ["json"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls-no-provider", "socks"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "tls12"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0.28"
thiserror = "2.0"
tempfile = "3.27"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
toml_edit = "0.23.10"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4"] }

# ── Build profiles: reduce target/ disk usage ──────────────────────────
# Default debug builds emit full DWARF (~500 MB+ for a workspace this size).
# Switching to "line-tables-only" cuts that by 60-80 % while preserving
# backtraces and IDE breakpoint support.

[profile.dev]
# Only emit line tables, not full DWARF debug info. Saves massive disk space.
debug = "line-tables-only"
# Fewer codegen-units = fewer .o / .dwo files in target/
codegen-units = 16

[profile.test]
# Tests don't need full debug info either
debug = "line-tables-only"
codegen-units = 16

[profile.release]
# Strip all symbols from release binaries — huge savings
strip = true
# Thin LTO: good size reduction without massive compile-time cost
lto = "thin"
codegen-units = 16

[profile.bench]
strip = true
lto = "thin"
codegen-units = 16
