[package]
name = "mimofan-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model/provider registry and fallback strategy for mimofan"

[dependencies]
mimofan-config = { path = "../config", version = "0.0.1" }
serde.workspace = true
