[package]
name = "mimofan-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "App-server transport for mimofan runtime integrations"
# `mimofan app-server` is owned by mimofan-cli; this crate is library-only.
autobins = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
mimofan-agent = { path = "../agent" }
mimofan-config = { path = "../config" }
mimofan-core = { path = "../core" }
mimofan-execpolicy = { path = "../execpolicy" }
mimofan-hooks = { path = "../hooks" }
mimofan-mcp = { path = "../mcp" }
mimofan-protocol = { path = "../protocol" }
mimofan-state = { path = "../state" }
mimofan-tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["json"] }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = "0.5"
