[package]
name = "mimofan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MiMo 专属中文编码助手"

[[bin]]
name = "mimofan"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
mimofan-agent = { path = "../agent" }
mimofan-app-server = { path = "../app-server" }
mimofan-config = { path = "../config" }
mimofan-execpolicy = { path = "../execpolicy" }
mimofan-mcp = { path = "../mcp" }
mimofan-release = { path = "../release" }
mimofan-secrets = { path = "../secrets" }
mimofan-state = { path = "../state" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rustls.workspace = true
semver.workspace = true
tokio.workspace = true
sha2.workspace = true
tempfile.workspace = true
tracing.workspace = true

# Parent-death cleanup for delegated server children (#3259): on Linux the
# dispatcher sets PR_SET_PDEATHSIG so the child is signalled if the dispatcher
# dies uncatchably; on Windows it assigns the child to a kill-on-job-close Job
# Object.
[target.'cfg(all(target_os = "linux", not(target_env = "ohos")))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
