[package]
name = "mimofan-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config schema and precedence model for mimofan"

[dependencies]
anyhow.workspace = true
mimofan-execpolicy = { path = "../execpolicy", version = "0.0.1" }
mimofan-secrets = { path = "../secrets", version = "0.0.1" }
dirs.workspace = true
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
