[package]
name = "mimofan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for mimofan"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mimofan-agent = { path = "../agent", version = "0.8.65" }
mimofan-config = { path = "../config", version = "0.8.65" }
mimofan-execpolicy = { path = "../execpolicy", version = "0.8.65" }
mimofan-hooks = { path = "../hooks", version = "0.8.65" }
mimofan-mcp = { path = "../mcp", version = "0.8.65" }
mimofan-protocol = { path = "../protocol", version = "0.8.65" }
mimofan-state = { path = "../state", version = "0.8.65" }
mimofan-tools = { path = "../tools", version = "0.8.65" }
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
