[package]
name = "mimofan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for mimofan"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mimofan-agent = { path = "../agent" }
mimofan-config = { path = "../config" }
mimofan-execpolicy = { path = "../execpolicy" }
mimofan-hooks = { path = "../hooks" }
mimofan-mcp = { path = "../mcp" }
mimofan-protocol = { path = "../protocol" }
mimofan-state = { path = "../state" }
mimofan-tools = { path = "../tools" }
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
