[package]
name = "mimofan-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution policy and approval model for mimofan"

[dependencies]
anyhow.workspace = true
mimofan-protocol = { path = "../protocol" }
serde.workspace = true
