[package]
name = "mimofan-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool invocation lifecycle, schema validation, and scheduler parallelism for mimofan"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
mimofan-protocol = { path = "../protocol", version = "0.0.1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
